--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,11 @@
 						<div class="news-text-box">
 							<h3><a href="single-news.html">Death Of Socrates</a></h3>
 							<p class="excerpt" align="justify">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
-							<a href="descartes-socrates.html"> <button class="read-more"> Read More </button> </a>
+							<a href="death-socrates.html"><button class="read-more" style="margin-top: 60px;"> Read More </button></a>
+						</div>
+						<div class="read-more-bar">
+	
+							<div class="blog-bar blog-bar1"></div>
 						</div>
 					</div>
 				</div>
@@ -126,7 +130,11 @@
 						<div class="news-text-box">
 							<h3><a href="descartes-first.html">Descrates' First Meditation</a></h3>
 							<p class="excerpt" align="justify">What is the truth? Is it the set of beliefs we are endowed with when we were born? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?</p>
-							<a href="descartes-first.html"> <button class="read-more"> Read More </button> </a>
+							<a href="descartes-first.html"><button class="read-more" style="margin-top: 37px;"> Read More </button> </a>
+						</div>
+						<div class="read-more-bar">
+
+							<div class="blog-bar blog-bar2"></div>
 						</div>
 					</div>
 				</div>
@@ -140,9 +148,27 @@
 							<p class="excerpt" align="justify">So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be.</p>
 							<a href="descartes-second.html"> <button class="read-more"> Read More </button> </a>
 						</div>
+						<div class="read-more-bar">
+
+							<div class="blog-bar blog-bar3"></div>
+						</div>
 					</div>
 				</div>
-				
+				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
+					<div class="single-latest-news">
+					<a href="what-is-a-myth.html"><div class="latest-news-bg news-bg-1">
+						<img src="assets/img/what-is-a-myth.png" alt="" height="100%", width="100%">
+					</div></a>
+					<div class="news-text-box">
+						<h3><a href="what-is-a-myth.html">What Is A Myth?</a></h3>
+						<p class="excerpt" align="justify">In primitive societies, mythology infilitrated every aspect of society, engraved deeply into the soul of each individual in the society to the degree that deconstructing the mythology of a society was equivalent to deconstructing the society itself and its death. </p>
+						<a href="what-is-a-myth.html"><button class="read-more" style="margin-top: -8px;"> Read More </button></a>
+					</div>
+					<div class="read-more-bar">
+
+						<div class="blog-bar blog-bar1"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
