--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="death-socrates.html"><div class="latest-news-bg news-bg-1">
-							<img src="assets/img/Death_of_Socrates.jpg" alt="" height="100%", width="100%">
+						<a href="what-is-a-myth.html"><div class="latest-news-bg news-bg-1">
+							<img src="assets/img/what-is-a-myth.png" alt="" height="100%", width="100%">
 						</div></a>
 						<div class="news-text-box">
-							<h3><a href="death-socrates.html">Death Of Socrates</a></h3>
-							<p class="excerpt" align="justify">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
-							<a href="death-socrates.html"><button class="read-more" style="margin-top: 60px;"> Read More </button></a>
+							<h3><a href="what-is-a-myth.html">What Is A Myth?</a></h3>
+							<p class="excerpt" align="justify">In primitive societies, mythology infilitrated every aspect of society, engraved deeply into the soul of each individual in the society to the degree that deconstructing the mythology of a society was equivalent to deconstructing the society itself and its death. </p>
+							<a href="what-is-a-myth.html"><button class="read-more" style="margin-top: -8px;"> Read More </button></a>
 						</div>
 						<div class="read-more-bar">
 
