--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
 					</div>
 				</div>
 				<div class="about-text">
-					<h1>About Me</h1>
+					<div>	
+						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
+					</div>
+					<div class="projcard-bar" style="transform: translateX(200px); width: 150px; height: 3px;"></div>
 					<p>
 						I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer. I'm currently enrolled in an Honors
 						curriculum with a STEM emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
 					</p>
-					<a href="https://drive.google.com/file/d/1heC-F6UbB2_jC29a570bZu50UF3XttQ-/view?usp=sharing"><button class="button-35"> Résumé </button></a>
+					<a href="https://drive.google.com/file/d/1heC-F6UbB2_jC29a570bZu50UF3XttQ-/view?usp=sharing"><button class="cart-btn"> Résumé </button></a>
 					
 				</div>
 			</div>
