--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<!-- end hero area -->
 
 	<!-- features list section -->
-	<section>
+	<section class="nbout">
 		<section class="about" id="about">
 			<div class="main">
 				<div class="wrapper">
@@ -133,6 +133,41 @@
 				</div>
 			</div>
 		</section>
+		<div class="bontainer">
+			<div class="cbard">
+			  <div class="face face1">
+				<div class="content">
+				  <h2>Lorem Ipsum</h2> 
+				  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+				</div>
+			  </div>
+			  <div class="face face2">
+				<h2>01</h2>
+			  </div>
+			</div>
+			<div class="cbard">
+				<div class="face face1">
+				  <div class="content">
+					<h2>Lorem Ipsum</h2> 
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+				  </div>
+				</div>
+				<div class="face face2">
+				  <h2>01</h2>
+				</div>
+			  </div>
+			  <div class="cbard">
+				<div class="face face1">
+				  <div class="content">
+					<h2>Lorem Ipsum</h2> 
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+				  </div>
+				</div>
+				<div class="face face2">
+				  <h2>01</h2>
+				</div>
+			  </div>
+		  </div>
 	</section>
 	<!-- end features list section -->
 
