--- a/index.html
+++ b/index.html
@@ -137,8 +137,15 @@
 			<div class="cbard">
 			  <div class="face face1">
 				<div class="content">
-				  <h2>Lorem Ipsum</h2> 
-				  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+					<div class="icon">
+						4.0
+					</div>
+					<div class="info">
+						<h3>Cummulative GPA</h3>
+						<p>
+							Out of 4.0 unweighted GPA through the 3 years of high school.
+						</p>
+					</div>
 				</div>
 			  </div>
 			  <div class="face face2">
@@ -148,8 +155,15 @@
 			<div class="cbard">
 				<div class="face face1">
 				  <div class="content">
-					<h2>Lorem Ipsum</h2> 
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+					<div class="icon">
+						35
+					</div>
+					<div class="info">
+						<h3>ACT</h3>
+						<p>
+							36 Math, 35 Science, 34 English, and 23 Reading.
+						</p>
+					</div>
 				  </div>
 				</div>
 				<div class="face face2">
@@ -159,12 +173,19 @@
 			  <div class="cbard">
 				<div class="face face1">
 				  <div class="content">
-					<h2>Lorem Ipsum</h2> 
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+					<div class="icon">
+						114
+					</div>
+					<div class="info">
+						<h3>TOEFL iBT</h3>
+						<p>
+							30 Reading, 30 Listening, 27 Writing, 27 Speaking.
+						</p>
+					</div>
 				  </div>
 				</div>
 				<div class="face face2">
-				  <h3 style="text-align: center;">TOEFL <br> <br>  <br>iBT</h3>
+				  <h3 style="text-align: center;">TOEFL <br> <br> iBT</h3>
 				</div>
 			  </div>
 		  </div>
