--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
 				</div>
 			</div>
 		</section>
+		<div class="row">
+			<div class="col-lg-8 offset-lg-2 text-center">
+				<div class="section-title">	
+					<h3 style="font-size:3em;"><span style="color:#fabd44;">Aca</span>demics</h3>
+				</div>
+			</div>
+		</div>
 		<div class="bontainer">
 			<div class="cbard">
 			  <div class="face face1">
@@ -142,8 +149,8 @@
 					</div>
 					<div class="info">
 						<h3>Cummulative GPA</h3>
-						<p>
-							Out of 4.0 unweighted GPA through the 3 years of high school.
+						<p style="font-family: Roboto;">
+						<b>Out of 4.0 unweighted GPA through the 3 years of high school.</b>
 						</p>
 					</div>
 				</div>
@@ -160,8 +167,8 @@
 					</div>
 					<div class="info">
 						<h3>ACT</h3>
-						<p>
-							36 Math, 35 Science, 34 English, and 23 Reading.
+						<p style="font-family: Roboto;">
+						<b>36 Math, 35 Science, 34 English, and 23 Reading.</b>
 						</p>
 					</div>
 				  </div>
@@ -178,8 +185,8 @@
 					</div>
 					<div class="info">
 						<h3>TOEFL iBT</h3>
-						<p>
-							30 Reading, 30 Listening, 27 Writing, 27 Speaking.
+						<p style="font-family: Roboto;">
+							<b> 30 Reading, 30 Listening, 27 Writing, 27 Speaking. </b>
 						</p>
 					</div>
 				  </div>
