--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
 					<div class="projcard-bar" style="transform: translateX(200px); width: 150px; height: 3px;"></div>
-					<p>
+					<p style="color: white;">
 						I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer. I'm currently enrolled in an Honors
 						curriculum with a STEM emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
 					</p>
@@ -192,7 +192,7 @@
 				  </div>
 				</div>
 				<div class="face face2">
-				  <h3 style="text-align: center;">TOEFL <br> <br> iBT</h3>
+				  <h3 style="text-align: center;">TOEFL iBT</h3>
 				</div>
 			  </div>
 		  </div>
