--- a/blog.html
+++ b/blog.html
@@ -59,14 +59,8 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="index.html">Home</a></li>
-								<li><a href="news.html">Blog</a>
-									<ul class="sub-menu">
-										<li><a href="death-socrates.html">Death of Socrates</a></li>
-										<li><a href="descartes-first.html">Descartes' First Meditation</a></li>
-										<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
-									</ul>
-								</li>
+								<li><a href="index.html">Home</a></li>
+								<li class="current-list-item"><a href="blog.html">Blog</a></li>
 								<li>
 									<div class="header-icons">
 										
@@ -112,7 +106,7 @@
 							<img src="assets/img/Death_of_Socrates.jpg" alt="" height="100%", width="100%">
 						</div></a>
 						<div class="news-text-box">
-							<h3><a href="single-news.html">Death Of Socrates</a></h3>
+							<h3><a href="death-socrates.html">Death Of Socrates</a></h3>
 							<p class="excerpt" align="justify">Socrates, The father of western philosophy, surprisingly, never wrote a line in his life! All what we know about him is from the writings of his student Plato who also went on to become a great philosopher. </p>
 							<a href="death-socrates.html"><button class="read-more" style="margin-top: 60px;"> Read More </button></a>
 							
