--- a/what-is-a-myth.html
+++ b/what-is-a-myth.html
@@ -59,14 +59,8 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="index.html">Home</a></li>
-								<li><a href="blog.html">Blog</a>
-									<ul class="sub-menu">
-										<li><a href="death-socrates.html">Death of Socrates</a></li>
-										<li><a href="descartes-first.html">Descartes' First Meditation</a></li>
-										<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
-									</ul>
-								</li>
+								<li><a href="index.html">Home</a></li>
+								<li class="current-list-item"><a href="blog.html">Blog</a></li>
 								<li>
 									<div class="header-icons">
 									
@@ -94,7 +88,7 @@
 					<div class="col-lg-9 offset-lg-2 text-center">
 						<div class="hero-text">
 							<div class="hero-text-tablecell">
-								<h1>What Is A Myth</h1>
+								<h1>What Is A Myth?</h1>
 							</div>
 						</div>
 					</div>
@@ -121,7 +115,7 @@
 							<p align="justify">Throughout our life, we strive to become someone or something, a higher and more whole being than the weakly existence in the present. We seek passions, dreams, and meaning. Jung believes that we can reach our full potential through the process of individuation; a life-long process in which we strive to become the whole and higher being God (Whatever the concept means for now) created us to be.</p>
 							<p align="justify">In the journey of individuation, a person will encounter three main problems of great complexity that will often leave us in perplexity:</p>
 							<h3>Integrating The Shadow</h3>
-							<div class="blog-imgs"><img src="assets/img/the-shadow.jpg" alt=""></div>
+							<div class="blog-imgs"><img src="assets/img/the-shadow.jpg" alt="" style="height: 80vh;"></div>
 							<blockquote>It is a frightening thought that man also has a shadow side to him, consisting not just of little weaknesses and foibles, but of a positively demonic dynamism. The individual seldom knows anything of this; to him, as an individual, it is incredible that he should ever in any circumstances go beyond himself. <br> <br><i>~ Carl Justav Jung</i></blockquote>
 							<p>If we wish to achieve the total and complete self, we need to integrate our conscious and our unconcious selves. Specifically, we need to integrate our shadow or the dark side our our charcter into our concisous. The existence of the shadow conflicts with the ideals and attitudes we hold in our conscious self. Nevertheless, we still need to integrate this aspect of ourself if we wish to become whole. Otherwise, rejecting the shadow will cause a division in ourselves, a conflict between our conscious and our suppressed unconcsious.</p>
 							<h3>Integrating The Anima and The Animus</h3>
