--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- responsive -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 <body>
@@ -94,7 +95,7 @@
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
-							<h1><span class="orange-text">Math</span>ilosophy</h1>
+							<h1 data-aos="fade-down" data-aos-duration="2000"><span class="orange-text">Math</span>ilosophy</h1>
 						</div>
 					</div>
 				</div>
@@ -109,11 +110,11 @@
 		<section class="about" id="about">
 			<div class="main">
 				<div class="wrapper">
-					<div class="box">
+					<div class="box"  data-aos="fade-right" data-aos-duration="800">
 						<img src="assets/img/271654036_3134336553546619_1729818821235408570_n.jpg" alt="">
 					</div>
 				</div>
-				<div class="about-text">
+				<div class="about-text" data-aos="fade-left" data-aos-duration="1200">
 					<div>	
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
@@ -129,13 +130,13 @@
 		</section>
 		<div class="row">
 			<div class="col-lg-8 offset-lg-2 text-center">
-				<div class="section-title">	
+				<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
 					<h3 style="font-size:3em;"><span style="color:#fabd44;">Aca</span>demics</h3>
 				</div>
 			</div>
 		</div>
 		<div class="bontainer">
-			<div class="cbard">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="600">
 			  <div class="face face1">
 				<div class="content">
 					<div class="icon">
@@ -153,7 +154,7 @@
 				<h3>GPA</h3>
 			  </div>
 			</div>
-			<div class="cbard">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="300">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
@@ -171,7 +172,7 @@
 				  <h3>ACT</h3>
 				</div>
 			  </div>
-			  <div class="cbard">
+			  <div class="cbard" data-aos="fade-right">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
@@ -199,7 +200,7 @@
 		<div class="container" id="my_projects">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
+					<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
 						<h3><span class="orange-text">My</span> Projects</h3>
 					</div>
 				</div>
@@ -207,7 +208,7 @@
 
 			<div class="owl-carousel owl-theme blog-post">
 
-					<div class="single-product-item">
+					<div class="single-product-item" data-aos="fade-left">
 						<div class="product-image">
 							<a href=https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER><img src="assets/img/products/post-1.jpg" alt="" height="220px"></a>
 						</div>
@@ -218,7 +219,7 @@
 						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="cart-btn" style="margin-top: 32px;">Explore</button></a>
 					</div>
 
-					<div class="single-product-item">
+					<div class="single-product-item" data-aos="fade-left">
 						<div class="product-image">
 							<a href=https://github.com/AhmedMoussa-png/Neural-style-transfer-Project><img src="assets/img/products/post-2.png" alt="" height="220px"></a>
 						</div>
@@ -227,7 +228,7 @@
 							depends on copying the style of a base image and composing the image desired in that style. </p>
 						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="cart-btn" style="margin-top: 22px;">Explore</button></a>
 					</div>
-					<div class="single-product-item">
+					<div class="single-product-item" data-aos="fade-left">
 						<div class="product-image">
 							<a href=https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
 						</div>
@@ -237,7 +238,7 @@
 					</div>
 
 
-					<div class="single-product-item">
+					<div class="single-product-item" data-aos="fade-left">
 						<div class="product-image">
 							<a href=https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
 						</div>
@@ -258,13 +259,13 @@
 				<section class="cart-banner pt-100 pb-100" id="publications">
 						<div class="row">
 							<div class="col-lg-8 offset-lg-2 text-center">
-								<div class="section-title">	
+								<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
 									<h3><span class="orange-text">Publications</span> <span class="white-text">&</span> Books</h3>
 								</div>
 							</div>
 						</div>
 					<div class="projcard-container">
-						<div class="projcard projcard1 projcard-red">
+						<div class="projcard projcard1 projcard-red" data-aos="fade-up-left" data-aos-duration="600">
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
 								<div class="projcard-textbox projcard-textbox1">
@@ -283,7 +284,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="projcard projcard2 projcard-red">
+						<div class="projcard projcard2 projcard-red" data-aos="fade-up-right" data-aos-duration="600">
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard2-img" src="/assets/img/the_calculus_of_the_circle.jpg" />
 								<div class="projcard-textbox">
@@ -300,7 +301,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="projcard projcard3 projcard-red">
+						<div class="projcard projcard3 projcard-red" data-aos="fade-up-left" data-aos-duration="600">
 							<div class="projcard-innerbox">
 								<img class="projcard-img" src="/assets/img/thermodynamics_handbook.jpg" />
 								<div class="projcard-textbox projcard-textbox3">
@@ -331,7 +332,7 @@
 
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
+					<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
 						<h3><span class="orange-text">Blog</span></h3>
 					</div>
 				</div>
@@ -339,7 +340,7 @@
 
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
+					<div class="single-latest-news" data-aos="fade-right" data-aos-delay="400">
 						<a href="what-is-a-myth.html"><div class="latest-news-bg news-bg-1">
 							<img src="assets/img/what-is-a-myth.png" alt="" height="100%", width="100%">
 						</div></a>
@@ -355,7 +356,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
+					<div class="single-latest-news" data-aos="fade-right" data-aos-delay="200">
 						<a href="descartes-first.html"><div class="latest-news-bg news-bg-2">
 							<img src="assets/img/descartes_first_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
@@ -371,7 +372,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-					<div class="single-latest-news">
+					<div class="single-latest-news" data-aos="fade-right">
 						<a href="descartes-second.html"><div class="latest-news-bg news-bg-3">
 							<img src="assets/img/descartes_second_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
@@ -446,6 +447,10 @@
 	<script src="assets/js/sticker.js"></script>
 	<!-- main js -->
 	<script src="assets/js/main.js"></script>
-
+	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+		AOS.init();
+	</script>
 </body>
 </html>
