--- a/what-is-a-myth.html
+++ b/what-is-a-myth.html
@@ -30,6 +30,8 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- responsive -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -105,26 +107,26 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="what-is-myth-bg"></div>
+							<div class="what-is-myth-bg" data-aos="fade-left"></div>
 							<p align="justify">The Birth of Horus, Isis and Osiris, Hercules and The Lion, and even in our modern age, religions; they all fall under the umbrella of myths. Ancient and Primitive societies were constructed and held together by their sacred mythology. Mythology infilitrated every aspect of society, engraved deeply into the soul of each individual in the society to the degree that deconstructing the mythology of a society was equivalent to deconstructing the society itself and its death.</p>
 							<p align="justify">In modern ages, myths are usually looked down upon, as a remnants of a primitive society which didn't have enough intelligence or knoweldge to comprehend the world; gods were created to explain the water cycle and other gods were created to bliss the crops of farmers. They are seen as symbols of illusions or falsehood.</p>
 							<p align="justify">Nevertheless, it's equally childish to assume that religions are out-dated and can be replaced by the almighty science, which seems to be doing really well in explaining the world. Myths/Religions are more articulated and sophistacated than the image often ascribed to them. They are profound psychological tools in response to the unkown world - Both the inner and the outer world-; life and death; good and evil; the ego, shadow and total self. They are sophsicated meditations on the meaning of life.</p>
 							<p align="justify">The relation between myths and humanity is the same as that of the relation between dreams and individuals. They are both results of our psychological unconscious. Our unconscious is a separated entity from ourselves. It tries to show us psychological truths important about ourselves only through symbols. Myths, however, represent psychological truths of all humanity, regardless of their demographic, history, or race. They represent the collective unconscious of humanity. The psychological truths present themselves in the form of stories, patterns of life, or archetypes. The truths held by archetypes are valid for all humanity.</p>
 							<p align="justify">Carl Gustav Jung, father of analytical psychology, noticed that sometimes our dreams are often impersonal. They sometimes don't have messages that are specific to us only, some kind of an "impersonal" nature that can't be derived from our own experiences. These dreams are messengers of the collective unconcisous. Jung noticed in several cases that some of his patients share some kind of a fundamental imaginery that presists through all those different and unrelated individuals.  Jung asserted that the similarities among dreams and myths are the result of the projection of the collective unconcious rather than the personal unconscious onto the external world. Finally, he comes to the conclusion that myth originates and functions to satisfy the psychological need for contact with the unconscious — not merely to announce the existence of the unconscious, but to let us experience it.</p>
-							<h3>Individuation, Becoming A Whole</h3>
+							<h3 data-aos="fade-left">Individuation, Becoming A Whole</h3>
 							<p align="justify">Throughout our life, we strive to become someone or something, a higher and more whole being than the weakly existence in the present. We seek passions, dreams, and meaning. Jung believes that we can reach our full potential through the process of individuation; a life-long process in which we strive to become the whole and higher being God (Whatever the concept means for now) created us to be.</p>
 							<p align="justify">In the journey of individuation, a person will encounter three main problems of great complexity that will often leave us in perplexity:</p>
-							<h3>Integrating The Shadow</h3>
-							<div class="blog-imgs"><img src="assets/img/the-shadow.jpg" alt="" style="height: 80vh;"></div>
-							<blockquote>It is a frightening thought that man also has a shadow side to him, consisting not just of little weaknesses and foibles, but of a positively demonic dynamism. The individual seldom knows anything of this; to him, as an individual, it is incredible that he should ever in any circumstances go beyond himself. <br> <br><i>~ Carl Justav Jung</i></blockquote>
-							<p>If we wish to achieve the total and complete self, we need to integrate our conscious and our unconcious selves. Specifically, we need to integrate our shadow or the dark side our our charcter into our concisous. The existence of the shadow conflicts with the ideals and attitudes we hold in our conscious self. Nevertheless, we still need to integrate this aspect of ourself if we wish to become whole. Otherwise, rejecting the shadow will cause a division in ourselves, a conflict between our conscious and our suppressed unconcsious.</p>
-							<h3>Integrating The Anima and The Animus</h3>
-							<div class="blog-imgs"><img src="assets/img/anima-animus.png" alt="" style="height: 70vh;"></div>
-							<p>Jung has demonstraed that each human being is androgynous, combining both masculine and feminine elements. Over the course of life, a man learns to identify more with his masculine elements, leaving his feminine elements to the grasp of the unconcious. A woman does the converse, she identifies more with her feminine elements, wearing her masculine elements on the inside. Both of these inner man and inner woman hidden in the unconscious of both women and men are called animus and anima, respectively. The second problem in the process of indviduation is managing to integrate both the anima and the animus.</p>
-							<h3>The Conflict Between The Individuation Process and Religions</h3>
-							<p>The typical consciousness of Islamic or Christian belief strives to become a perfect, blameless being, suppressing aspects of ourselves because they are deemed as sins. Psychological darkness or imperfection has no place in the typical consciosness of religions. On the other hand, the indviduation process requires us to embrace our own imperfections and sins to integrate our shadow into the being of our own consciousness, with the aim of being a whole, not perfection.</p>
-							<p>Individuation is a life-long process. One must go on a great pligrimage to the lands of the unkown and the unconsciousness, searching painfully for the fullfillment of one's own being. It's the great theme of life, delving into the unknown to burn like a phoenix and be reborn, to become a whole, which is both a divine gift and a result of the effort of man in his journey.</p>
-							<blockquote>One cannot individuate as long as one is playing a role to oneself; the convictions one has about oneself are the most subtle form of persona and the most subtle obstacle against any true individuation. One can admit practically anything, yet somewhere one retains the idea that one is nevertheless so-and-so, and this is always a sort of final argument which counts apparently as a plus; yet it functions as an influence against true individuation.
+							<h3 data-aos="fade-left">Integrating The Shadow</h3>
+							<div class="blog-imgs" data-aos="fade-left"><img src="assets/img/the-shadow.jpg" alt="" style="height: 80vh;"></div>
+							<blockquote data-aos="fade-left">It is a frightening thought that man also has a shadow side to him, consisting not just of little weaknesses and foibles, but of a positively demonic dynamism. The individual seldom knows anything of this; to him, as an individual, it is incredible that he should ever in any circumstances go beyond himself. <br> <br><i>~ Carl Justav Jung</i></blockquote>
+							<p align="justify">If we wish to achieve the total and complete self, we need to integrate our conscious and our unconcious selves. Specifically, we need to integrate our shadow or the dark side our our charcter into our concisous. The existence of the shadow conflicts with the ideals and attitudes we hold in our conscious self. Nevertheless, we still need to integrate this aspect of ourself if we wish to become whole. Otherwise, rejecting the shadow will cause a division in ourselves, a conflict between our conscious and our suppressed unconcsious.</p>
+							<h3 data-aos="fade-left">Integrating The Anima and The Animus</h3>
+							<div class="blog-imgs" data-aos="fade-left"><img src="assets/img/anima-animus.png" alt="" style="height: 70vh;"></div>
+							<p align="justify">Jung has demonstraed that each human being is androgynous, combining both masculine and feminine elements. Over the course of life, a man learns to identify more with his masculine elements, leaving his feminine elements to the grasp of the unconcious. A woman does the converse, she identifies more with her feminine elements, wearing her masculine elements on the inside. Both of these inner man and inner woman hidden in the unconscious of both women and men are called animus and anima, respectively. The second problem in the process of indviduation is managing to integrate both the anima and the animus.</p>
+							<h3 data-aos="fade-left">The Conflict Between The Individuation Process and Religions</h3>
+							<p align="justify">The typical consciousness of Islamic or Christian belief strives to become a perfect, blameless being, suppressing aspects of ourselves because they are deemed as sins. Psychological darkness or imperfection has no place in the typical consciosness of religions. On the other hand, the indviduation process requires us to embrace our own imperfections and sins to integrate our shadow into the being of our own consciousness, with the aim of being a whole, not perfection.</p>
+							<p align="justify">Individuation is a life-long process. One must go on a great pligrimage to the lands of the unkown and the unconsciousness, searching painfully for the fullfillment of one's own being. It's the great theme of life, delving into the unknown to burn like a phoenix and be reborn, to become a whole, which is both a divine gift and a result of the effort of man in his journey.</p>
+							<blockquote data-aos="fade-left">One cannot individuate as long as one is playing a role to oneself; the convictions one has about oneself are the most subtle form of persona and the most subtle obstacle against any true individuation. One can admit practically anything, yet somewhere one retains the idea that one is nevertheless so-and-so, and this is always a sort of final argument which counts apparently as a plus; yet it functions as an influence against true individuation.
 
 								It is a most painful procedure to tear off those veils, but each step forward in psychological development means just that, the tearing off of a new veil. We are like onions with many skins, and we have to peel ourselves again and again in order to get at the real core. <br> <br><i>~ Carl Justav Jung</i> </blockquote>
 						</div>
@@ -137,12 +139,12 @@
 				<div class="col-lg-4">
 					<div class="sidebar-section">
 						<div class="recent-posts">
-							<h4>Recent Posts</h4>
+							<h4 data-aos="fade-left">Recent Posts</h4>
 							<ul>
-								<li><a href="death-socrates.html">Death of Socrates</a></li>
-								<li><a href="descartes-first.html">Descartes' First Meditation</a></li>
-								<li><a href="descartes-second.html">Descartes' Second Meditation</a></li>
-								<li><a href="what-is-a-myth.html">What Is A Myth?</a></li>
+								<li><a href="death-socrates.html" data-aos="fade-left" data-aos-delay="200">Death of Socrates</a></li>
+								<li><a href="descartes-first.html" data-aos="fade-left" data-aos-delay="300">Descartes' First Meditation</a></li>
+								<li><a href="descartes-second.html" data-aos="fade-left" data-aos-delay="400">Descartes' Second Meditation</a></li>
+								<li><a href="what-is-a-myth.html" data-aos="fade-left" data-aos-delay="500">What Is A Myth?</a></li>
 							</ul>
 						</div>
 					
@@ -204,6 +206,10 @@
 	<script src="assets/js/sticker.js"></script>
 	<!-- main js -->
 	<script src="assets/js/main.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+		AOS.init();
+	</script>
 
 </body>
 </html>
